--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "repositories": [
         {
             "type": "composer",
-            "url": "http//localhost:4680"
+            "url": "http//satis.tushto.com"
         }
     ]
 }
